--- a/swiftgen/swiftgen.yml
+++ b/swiftgen/swiftgen.yml
@@ -3,8 +3,8 @@
 ## In case your config entries all use a common input/output parent directory, you can specify those here.
 ##   Every input/output paths in the rest of the config will then be expressed relative to these.
 ##   Those two top-level keys are optional and default to "." (the directory of the config file).
-input_dir: .
-output_dir: .
+input_dir: ../RocketApp/Infrastructure/Sources/UIToolkit/Resources
+output_dir: ../RocketApp/Infrastructure/Sources/UIToolkit/Resources
 
 
 ## Generate constants for your localized strings.
@@ -17,11 +17,11 @@ strings:
         templatePath: localizedstringkey_strings_template.stencil
         output: LocalizedStringKey+keys.swift
         ## params are described in the template file
-        # params:
+        params:
             # swiftLintDisableRules: true
             # noComments: true
-            # bundleModule: true
-            # publicAccess: true
+            bundleModule: true
+            publicAccess: true
 
 
 ## Generate constants for your Assets Catalogs, including constants for images, colors, ARKit resources, etc.
@@ -30,7 +30,7 @@ strings:
 ##   - To know which params are supported for a template, use `swiftgen template doc xcassets swift5` to open the template documentation on GitHub.
 xcassets:
     ## path to the images catalog relative from input_dir
-  - inputs: Images.xcassets
+  - inputs: Assets.xcassets
     outputs:
     - templatePath: asset_xcassets_template.stencil
       # destionation path for the generated file
@@ -39,28 +39,28 @@ xcassets:
         type: image
         # swiftLintDisableRules: true
         # allValues: true
-        # bundleModule: true
-        # publicAccess: true
+        bundleModule: true
+        publicAccess: true
     ## path to the colors catalog relative from input_dir
-  - inputs: Colors.xcassets
-    outputs:
-    - templatePath: asset_xcassets_template.stencil
-      ## destionation path for the generated file
-      output: Color+assets.swift
-      params:
-        type: color
+  # - inputs: Colors.xcassets
+  #   outputs:
+  #   - templatePath: asset_xcassets_template.stencil
+  #     ## destionation path for the generated file
+  #     output: Color+assets.swift
+  #     params:
+  #       type: color
         # swiftLintDisableRules: true
         # allValues: true
         # bundleModule: true
         # publicAccess: true
 
 
-files:
-  inputs: Assets/Videos
-  filter: .+\.mp4$
-  outputs:
-    templatePath: files_template.stencil
-    output: Files.swift
+# files:
+#   inputs: Assets/Videos
+#   filter: .+\.mp4$
+#   outputs:
+#     templatePath: files_template.stencil
+#     output: Files.swift
     # params:
     #   publicAccess: true
 
