--- a/RocketApp.xcodeproj/xcshareddata/xcschemes/RocketApp.xcscheme
+++ b/RocketApp.xcodeproj/xcshareddata/xcschemes/RocketApp.xcscheme
@@ -5,6 +5,24 @@
    <BuildAction
       parallelizeBuildables = "YES"
       buildImplicitDependencies = "YES">
+      <PreActions>
+         <ExecutionAction
+            ActionType = "Xcode.IDEStandardExecutionActionsCore.ExecutionActionType.ShellScriptAction">
+            <ActionContent
+               title = "Run Script"
+               scriptText = "# Type a script or drag a script file from your workspace to insert its path.&#10;cd &quot;$SRCROOT/swiftgen&quot;&#10;/opt/homebrew/bin/swiftgen&#10;">
+               <EnvironmentBuildable>
+                  <BuildableReference
+                     BuildableIdentifier = "primary"
+                     BlueprintIdentifier = "160CA40C28A506E4004A274A"
+                     BuildableName = "RocketApp.app"
+                     BlueprintName = "RocketApp"
+                     ReferencedContainer = "container:RocketApp.xcodeproj">
+                  </BuildableReference>
+               </EnvironmentBuildable>
+            </ActionContent>
+         </ExecutionAction>
+      </PreActions>
       <BuildActionEntries>
          <BuildActionEntry
             buildForTesting = "YES"
