MR comments resolving.

--- a/fastlane/.env.default
+++ b/fastlane/.env.default
@@ -1,14 +1,11 @@
 #General
-TEAM_ID = "2005235"
-APP_IDENTIFIER = "com.quanti.swift.NN-mobile-communicator"
-IPA = "My2NApp.ipa"
+TEAM_ID = ""
+APP_IDENTIFIER = ""
 BUILD_DIR = "./build"
-PLIST_PATH = "My2NApp/SupportingFiles/Info.plist"
-PLIST_PATH_EXTENSION = "CallingExtension/Info.plist"
 IPA_PATH = "${BUILD_DIR}/${IPA}"
-APP_NAME = "My2N App"
+APP_NAME = "RocketAPP"
 APP_NAME_SHORT = "MAPP"
-XCODE_SCHEME = "My2NApp"
+XCODE_SCHEME = "RocketApp"
 
 
 FASTLANE_ITC_TEAM_ID = "${TEAM_ID}"
